<resources>
    <string name="app_name">Firebase Authentication</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="createaccount">Create Account</string>
    <string name="verify">Verify</string>
    <string name="welcome1">Welcome to Email and Password Auth!</string>
    <string name="welcome2">Welcome to Anonymous Auth!</string>
    <string name="welcome3">Welcome to Facebook Auth!</string>
    <string name="welcome4">Welcome to Google Auth!</string>
    <string name="button1">Facebook Auth</string>
    <string name="button2">Google Auth</string>
    <string name="button3">Email Auth</string>
    <string name="button4">Anonymous Auth</string>
    <string name="accountlink">Account Linking</string>
    <string name="linkaccount">Link Account</string>
    <string name="disconnect">Disconnect</string>
    <string name="title">Firebase Login</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member?, register now!</string>
    <string name="btn_link_to_login">Already registered?, Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="facebook_app_id">529972074007133</string>
    <string name="fb_login_protocol_scheme">fb529972074007133</string>

</resources>
