<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.rosinante24.firebaseauthentication.AnonymousLoginActivity">

    <ImageView
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:src="@drawable/firebaseicon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/welcome2"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize1" />

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize2"
        tools:text="Otong" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/jarak10dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_signin_anonymous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/groundbutton"
            android:text="@string/title_activity_login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_signout_anonymous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/jarak5dp"
            android:background="@drawable/groundbutton"
            android:enabled="false"
            android:text="@string/btn_sign_out"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/accountlink"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize3" />


    <EditText
        android:id="@+id/editext_email_anonymous"
        android:layout_width="match_parent"
        android:layout_height="@dimen/jarak45dp"
        android:layout_marginLeft="@dimen/jarak20dp"
        android:layout_marginRight="@dimen/jarak20dp"
        android:layout_marginTop="@dimen/jarak10dp"
        android:background="@drawable/backgroundedittext"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editext_password_anonymous"
        android:layout_width="match_parent"
        android:layout_height="@dimen/jarak45dp"
        android:layout_marginLeft="@dimen/jarak20dp"
        android:layout_marginRight="@dimen/jarak20dp"
        android:layout_marginTop="@dimen/jarak5dp"
        android:background="@drawable/backgroundedittext"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_linkaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/jarak20dp"
        android:background="@drawable/groundbutton"
        android:enabled="false"
        android:text="@string/linkaccount"
        android:textColor="@android:color/white" />
</LinearLayout>
