<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout"
    tools:context="com.rosinante24.firebaseauthentication.ForgotPasswordActivity">

    <ImageView
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_marginBottom="@dimen/margin_edit_text"
        android:src="@drawable/firebaseicon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title_forgot_password" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_button"
        android:gravity="center"
        android:text="@string/forgot_password_msg"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edit_text_email_forgot"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit_text"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/backgroundedittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/margin_edit_text"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_reset_password_forgot"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit_text"
        android:layout_marginTop="@dimen/margin_top_button"
        android:background="@drawable/groundbutton"
        android:text="@string/btn_reset_password"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text_back_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_button"
        android:gravity="center"
        android:text="@string/btn_back"
        android:textColor="@color/colorAccent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</LinearLayout>
