<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/jarak20dp"
    tools:context="com.rosinante24.firebaseauthentication.EmailLoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_gravity="center"
        android:src="@drawable/firebaseicon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/welcome1"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize4" />

    <TextView
        android:id="@+id/name_profile_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize2"
        tools:text="Otong" />

    <LinearLayout
        android:id="@+id/emailpassword_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_email_emaillogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/jarak45dp"
            android:layout_marginLeft="@dimen/jarak20dp"
            android:layout_marginRight="@dimen/jarak20dp"
            android:layout_marginTop="@dimen/jarak10dp"
            android:background="@drawable/backgroundedittext"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edittext_password_emaillogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/jarak45dp"
            android:layout_marginLeft="@dimen/jarak20dp"
            android:layout_marginRight="@dimen/jarak20dp"
            android:layout_marginTop="@dimen/jarak10dp"
            android:background="@drawable/backgroundedittext"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_login_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_singin_maillogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/jarak20dp"
            android:layout_marginRight="@dimen/jarak20dp"
            android:layout_marginTop="@dimen/jarak20dp"
            android:background="@drawable/groundbutton"
            android:text="@string/title_activity_login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_createaccount_maillogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/jarak20dp"
            android:layout_marginRight="@dimen/jarak20dp"
            android:layout_marginTop="@dimen/jarak10dp"
            android:background="@drawable/groundbutton"
            android:text="@string/createaccount"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signout_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/jarak10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/verify_button"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/jarak5dp"
            android:layout_weight="1"
            android:background="@drawable/groundbutton"
            android:text="@string/verify"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/sign_out_button"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/jarak5dp"
            android:layout_weight="1"
            android:background="@drawable/groundbutton"
            android:text="@string/btn_sign_out"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>
